# garmin-golf

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  update.sh
config/: analysis.json  clubs.json  golfer_profile.md  sg_baseline.json
data/processed/: club_stats.json  club_stats.md  progress.json  progress.md  strokes_gained.json  strokes_gained.md
data/processed/coach/: 2026_05_27_363980337.md  2026_05_29_364370807.md  2026_05_30_364563042.md  2026_06_01_364945310.md  2026_06_04_365394854.md  2026_06_07_366007562.md  2026_06_08_366184171.md
data/processed/rounds/: 2026_05_03_359943898.json  2026_05_03_359943898.md  2026_05_06_360308759.json  2026_05_15_362288120.json  2026_05_15_362288120.md  2026_05_25_363665238.md  2026_05_27_363980337.md  2026_05_29_364370807.md  2026_06_01_364945310.md  2026_06_04_365394854.json  2026_06_07_366007562.json  2026_06_07_366007562.md  2026_06_08_366184171.json  2026_06_08_366184171.md  352584512.json  352584512.md  353779138.json  353779138.md  354112867.json  354112867.md  355112934.json  355112934.md  355529005.json  355529005.md  355846045.json  355846045.md  356936614.json  356936614.md  (+20 more)
docs/: README.md  architecture.md  coach.md  dashboard.md  data-model.md  decisions.md  golfer-phasing-model.md  overview.md  pivot-sim-idea.md  roadmap.md  strokes-gained.md
mocks/: dashboard.html  icons.html  map.html  mobile.html  round.html
site/: index.html
src/: analyze.py  coach.py  config.py  garmin_client.py  geo.py  introspect.py  parse.py  progress.py  pull.py  putting.py  site.py  strokes_gained.py  update.py
